--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,5 @@ project(hw28)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
-set(SOURCE_FILES main.cpp hw28.cpp)
+set(SOURCE_FILES hw28.cpp)
 add_executable(hw28 ${SOURCE_FILES} hw28.cpp)
